# Mango

./: README.md  gradle.properties
app/src/main/assets/: StatistiquesMobs.txt
app/src/main/assets/Levels/: lvl_1.txt  lvl_3.txt
app/src/main/cpp/: Ball.cpp  Ball.hpp  Bouton.cpp  Bouton.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Clock.cpp  Clock.hpp  Collision_circle.cpp  Collision_circle.hpp  Ennemy.cpp  Ennemy.hpp  Fonctions.cpp  Fonctions.hpp  Game.cpp  Game.hpp  Ingame.cpp  Ingame.hpp  Lecteur_niveau.cpp  Lecteur_niveau.hpp  Menu.cpp  Menu.hpp  Niveau.cpp  Niveau.hpp  Pause_menu.cpp  Pause_menu.hpp  Personnage.cpp  Personnage.hpp  Selecteur_niveaux.cpp  Selecteur_niveaux.hpp  Stats.cpp  Stats.hpp  Texture_loader.cpp  Texture_loader.hpp  main.cpp
app/src/main/cpp/Ennemies/Ether/: Ether_black.cpp  Ether_black.hpp  Ether_blue.cpp  Ether_blue.hpp  Ether_gold.cpp  Ether_gold.hpp  Ether_type.cpp  Ether_type.hpp
app/src/main/res/values/: ic_launcher_background.xml
